<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_baseline_feedback_24"
        android:title="@string/nav_feedback" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/nav_about" />
    <item
        android:id="@+id/go_to_playlist"
        android:icon="@drawable/ic_baseline_playlist_play_24"
        android:title="@string/nav_playlists" />
    <item
        android:id="@+id/go_to_favourites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/nav_favourites" />
</menu>