<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/main_menu_Favourite"
        app:showAsAction="never" />
    <item
        android:id="@+id/playlist"
        android:icon="@drawable/ic_baseline_playlist_play_24"
        android:title="@string/main_menu_Playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/song_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/main_menu_refresh"
        app:showAsAction="ifRoom" />
</menu>