<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/singleAlbumImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="8dp"
            app:shapeAppearanceOverlay="@style/curved"
            app:srcCompat="@drawable/music_player" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/singleSongName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/single_song_name"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/singleAlbumName"
                app:layout_constraintEnd_toStartOf="@+id/singleTotalSongLength"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/singleAlbumName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/single_album_name"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/singleTotalSongLength"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleSongName" />

            <TextView
                android:id="@+id/singleTotalSongLength"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/single_total_length"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>